Completed app's logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,11 @@
         <activity android:name=".MainActivity" android:launchMode="singleTask">
 
         </activity>
+        <activity android:name="EditTransaction"/>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".AddTransactionActivity" />
         <activity android:name=".SelectCategoryActivity" />
+
     </application>
 
 
